--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /opt/carl
 COPY cudaPi.cu /opt/carl/cudaPi.cu
 RUN nvcc cudaPi.cu -o cudaPi && chmod +x cudaPi
 
-COPY gpu-test.sh /opt/carl/gpuTest.sh
+COPY gpuTest.sh /opt/carl/gpuTest.sh
 RUN chmod +x gpuTest.sh
 
 ENTRYPOINT ["/opt/gpuburn/gpuTest.sh"]
